clean out the repo a bit
Fixes #1

--- a/app/plugins/modules/tutorials/@tutorials/activation-debugging/package.json
+++ b/app/plugins/modules/tutorials/@tutorials/activation-debugging/package.json
@@ -24,7 +24,5 @@
       }
     }
   },
-  "dependencies": {
-    "modk": "git+ssh://git@github.ibm.com:nickm/modk.git"
-  }
+  "dependencies": {}
 }
