--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,6 @@ env:
     - NUM_OPENWHISK_AUTH_LAYERS=12 # number of layers that need an OpenWhisk auth key
     - MAX_TRAVIS_CONCURRENCY=4 # max number of concurrent top-level jobs we've configured
     - NO_MAC_DMG_INSTALLER=true # we can't build macOS DMG files in travis :(
-    - SHERPA_BUG_SESSION_FLOW=true
-    - SHERPA_BUG_ANNOTATIONS=true
-    - SHERPA_BUG_COMPOSITION_LIST=true
-    - SHERPA_BUG_729=true
-    - SHERPA_BUG_SESSION_LIST=true
-    - SHERPA_BUG_409=true
-    - SHERPA_FOR_TEST=https://sherpa-stage.wdpdist.com   # purposefully not SHERPA, so we test default env
     - DISPLAY=:99
     - WINDOW_WIDTH=1400                   # ! important ! so that clicks don't fail due to elements being off-viewport
     - WINDOW_HEIGHT=1050                  # ! ibid !
@@ -39,9 +32,7 @@ env:
 
 install: ./tools/travis/test/install.sh
 script: ./tools/travis/test/script.sh
-
-after_success:
-  - ./tools/travis/publishers/cos.sh
+after_success: ./tools/travis/publishers/cos.sh
 
 notifications:
   webhooks:
@@ -49,4 +40,3 @@ notifications:
   email:
     - nickm@us.ibm.com
     - mengting.yan1@ibm.com
-  slack: watsondataplatform:9aFO9Dv1PIq1YenObXn9dGqK
