--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - LAYERS=core1 IDX=1
     - LAYERS=core2 IDX=2
     - LAYERS=openwhisk1 IDX=3
-    - LAYERS=openwhisk2 IDX=4
+    - LAYERS=openwhisk2 IDX=4 NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_JAVA8=true
     - LAYERS=openwhisk3 IDX=5
     - LAYERS=openwhisk4 IDX=6
     - LAYERS=grid IDX=7
@@ -19,6 +19,9 @@ env:
     - LAYERS=LINT
 
   global:
+    - LOCAL_OPENWHISK=true # allows e.g. openwhisk/src/test/openwhisk1/headless to avoid trying to host set <not-local>
+    - IGNORE_CERTS=true # apache-composer needs this, because it doesn't obey INSECURE_SSL in wskprops
+    - API_HOST="" # delete any global definitions, as we will be using a local openwhisk
     - PATH=bin:$PATH
     - NUM_OPENWHISK_AUTH_LAYERS=12 # number of layers that need an OpenWhisk auth key
     - MAX_TRAVIS_CONCURRENCY=4 # max number of concurrent top-level jobs we've configured
