fix tslint errors and enable tslint tests
Fixes #26

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "tests"
   },
   "scripts": {
-    "lint": "npx standard && npx tslint -c app/tslint.json 'app/src/**/*.ts' 'app/plugins/modules/*/src/**/*.ts'",
+    "lint": "npx tslint -c app/tslint.json 'app/src/**/*.ts' 'app/plugins/modules/*/src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "export CLOUDSHELL_INSTALL_UI=true; (cd tests && ./bin/corral.sh && npm install) && cd app && npm install"
   },
@@ -41,43 +41,21 @@
   "bugs": {
     "url": "https://github.com/IBM/kui/issues"
   },
-  "homepage": "https://github.com/IBM/kui#readme",
-  "standard": {
-    "env": [
-      "es6",
-      "node",
-      "mocha"
-    ],
-    "ignore": [
-      "app/build",
-      "dist/headless/app",
-      "dist/electron/app",
-      "app/plugins/modules/*/plugin",
-      "app/plugins/modules/*/plugin",
-      "tests/tests/passes/core*",
-      "tests/tests/passes/grid",
-      "tests/tests/passes/k8s",
-      "tests/tests/passes/openwhisk*",
-      "**/composer/@demos",
-      "dist/builds",
-      "dist/electron/plugins",
-      "**/tests/data"
-    ]
-  },
+  "homepage": "https://github.com/starpit/shell#readme",
   "devDependencies": {
-    "css-loader": "^1.0.1",
-    "file-loader": "^2.0.0",
-    "http-server": "^0.11.1",
-    "ignore-loader": "^0.1.2",
-    "raw-loader": "^0.5.1",
-    "shebang-loader": "0.0.1",
-    "style-loader": "^0.23.1",
     "@types/debug": "^0.0.31",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.10",
     "@types/webdriverio": "^4.13.0",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
     "fs-extra": "^7.0.1",
+    "http-server": "^0.11.1",
+    "ignore-loader": "^0.1.2",
+    "raw-loader": "^0.5.1",
+    "shebang-loader": "0.0.1",
     "standard": "^12.0.1",
+    "style-loader": "^0.23.1",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.1.6"
