--- a/app/plugins/modules/apache-composer/package.json
+++ b/app/plugins/modules/apache-composer/package.json
@@ -15,9 +15,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@ibm-functions/composer": "^0.8.1",
-    "app-module-path": "^2.2.0",
-    "debug": "^4.0.1",
-    "openwhisk-fqn": "0.0.2"
+    "openwhisk-composer": "git://github.com:apache/incubator-openwhisk-composer.git",
+    "app-module-path": "^2.2.0"
   }
 }
