--- a/app/plugins/modules/bash-like/package.json
+++ b/app/plugins/modules/bash-like/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "plugin/plugin.js",
   "scripts": {
-    "postinstall": "./bin/postinstall.sh && ../../../../node_modules/.bin/tsc",
-    "pretest": "../../../../node_modules/.bin/tsc",
-    "compilenowatch": "../../../../node_modules/.bin/tsc",
-    "compile": "../../../../node_modules/.bin/tsc -watch -p ./"
+    "postinstall": "./bin/postinstall.sh && npx tsc",
+    "pretest": "npx tsc",
+    "compilenowatch": "npx tsc",
+    "compile": "npx tsc -watch -p ./",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
   "author": {
     "name": "Nick Mitchell",
@@ -17,5 +18,10 @@
   "dependencies": {
     "ansi-to-html": "^0.6.9",
     "diff2html": "^2.7.0"
+  },
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2"
   }
 }
