--- a/app/plugins/modules/core-support/package.json
+++ b/app/plugins/modules/core-support/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "plugin/plugin.js",
   "scripts": {
-    "postinstall": "../../../../node_modules/.bin/tsc",
-    "pretest": "../../../../node_modules/.bin/tsc",
-    "compilenowatch": "../../../../node_modules/.bin/tsc",
-    "compile": "../../../../node_modules/.bin/tsc -watch -p ./"
+    "postinstall": "npx tsc",
+    "pretest": "npx tsc",
+    "compilenowatch": "npx tsc",
+    "compile": "npx tsc -watch -p ./",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
   "author": {
     "name": "Nick Mitchell",
     "email": "nickm@us.ibm.com"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2"
+  }
 }
