--- a/app/plugins/modules/grid/package.json
+++ b/app/plugins/modules/grid/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "plugin.js",
   "scripts": {
-    "postinstall": "../../../../node_modules/.bin/tsc",
+    "postinstall": "npx tsc",
     "postinstall-yo": "rm -rf node_modules/monaco-editor/esm",
-    "pretest": "../../../../node_modules/.bin/tsc",
-    "compilenowatch": "../../../../node_modules/.bin/tsc",
-    "compile": "../../../../node_modules/.bin/tsc -watch -p ./"
+    "pretest": "npx tsc",
+    "compilenowatch": "npx tsc",
+    "compile": "npx tsc -watch -p ./",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
   "author": {
     "name": "Nick Mitchell",
@@ -17,5 +18,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2"
   }
 }
