--- a/app/plugins/modules/openwhisk-debug/package.json
+++ b/app/plugins/modules/openwhisk-debug/package.json
@@ -15,10 +15,16 @@
   "main": "plugin.js",
   "name": "openwhisk-debug",
   "scripts": {
-    "postinstall": "../../../../node_modules/.bin/tsc",
-    "pretest": "../../../../node_modules/.bin/tsc",
-    "compilenowatch": "../../../../node_modules/.bin/tsc",
-    "compile": "../../../../node_modules/.bin/tsc -watch -p ./"
+    "postinstall": "npx tsc",
+    "pretest": "npx tsc",
+    "compilenowatch": "npx tsc",
+    "compile": "npx tsc -watch -p ./",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2"
+  }
 }
