--- a/app/plugins/modules/openwhisk/package.json
+++ b/app/plugins/modules/openwhisk/package.json
@@ -4,10 +4,11 @@
   "description": "IBM Cloud shell plugin for OpenWhisk",
   "main": "plugin/plugin.js",
   "scripts": {
-    "postinstall": "../../../../node_modules/.bin/tsc",
-    "pretest": "../../../../node_modules/.bin/tsc",
-    "compilenowatch": "../../../../node_modules/.bin/tsc",
-    "compile": "../../../../node_modules/.bin/tsc -watch -p ./"
+    "postinstall": "npx tsc",
+    "pretest": "npx tsc",
+    "compilenowatch": "npx tsc",
+    "compile": "npx tsc -watch -p ./",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
   "keywords": [
     "openwhisk",
@@ -20,6 +21,9 @@
     "openwhisk": "git://github.com/starpit/openwhisk-client-js.git#add_client_timeout4"
   },
   "devDependencies": {
-    "@types/swagger-schema-official": "^2.0.14"
+    "@types/swagger-schema-official": "^2.0.14",
+    "tslint": "^5.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2"
   }
 }
