--- a/app/plugins/modules/tutorials/package.json
+++ b/app/plugins/modules/tutorials/package.json
@@ -5,10 +5,11 @@
   "main": "plugin/plugin.js",
   "scripts": {
     "preinstall": "rm -rf node_modules/jquery",
-    "postinstall": "../../../../node_modules/.bin/tsc; rm -rf node_modules/jquery/src && rm -f node_modules/jquery/external/sizzle/dist/sizzle.js && rm -f node_modules/jquery/dist/core.js && mv -f node_modules/jquery/dist/jquery.min.js node_modules/jquery/dist/jquery.js && rm -f node_modules/jquery/dist/jquery.slim* && mv -f node_modules/jquery/dist/jquery.min.map node_modules/jquery/dist/jquery.map",
-    "pretest": "../../../../node_modules/.bin/tsc",
-    "compilenowatch": "../../../../node_modules/.bin/tsc",
-    "compile": "../../../../node_modules/.bin/tsc -watch -p ./"
+    "postinstall": "npx tsc; rm -rf node_modules/jquery/src && rm -f node_modules/jquery/external/sizzle/dist/sizzle.js && rm -f node_modules/jquery/dist/core.js && mv -f node_modules/jquery/dist/jquery.min.js node_modules/jquery/dist/jquery.js && rm -f node_modules/jquery/dist/jquery.slim* && mv -f node_modules/jquery/dist/jquery.min.map node_modules/jquery/dist/jquery.map",
+    "pretest": "npx tsc",
+    "compilenowatch": "npx tsc",
+    "compile": "npx tsc -watch -p ./",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
   "keywords": [
     "openwhisk",
@@ -20,5 +21,10 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "marked": "^0.6.0"
+  },
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2"
   }
 }
