--- a/app/plugins/modules/wskflow/package.json
+++ b/app/plugins/modules/wskflow/package.json
@@ -5,10 +5,11 @@
   "main": "plugin/plugin.js",
   "scripts": {
     "preinstall": "rm -rf node_modules/d3 node_modules/jquery",
-    "postinstall": "../../../../node_modules/.bin/tsc && rm -rf node_modules/jquery/src && rm -f node_modules/jquery/external/sizzle/dist/sizzle.js && rm -f node_modules/jquery/dist/core.js && mv -f node_modules/jquery/dist/jquery.min.js node_modules/jquery/dist/jquery.js && rm -f node_modules/jquery/dist/jquery.slim* && mv -f node_modules/jquery/dist/jquery.min.map node_modules/jquery/dist/jquery.map && rm -rf node_modules/d3/src && mv node_modules/d3/d3.min.js node_modules/d3/d3.js && rm -f node_modules/elkjs/lib/elk-worker.js node_modules/elkjs/lib/elk.bundled.js",
-    "pretest": "../../../../node_modules/.bin/tsc",
-    "compilenowatch": "../../../../node_modules/.bin/tsc",
-    "compile": "../../../../node_modules/.bin/tsc -watch -p ./"
+    "postinstall": "npx tsc && rm -rf node_modules/jquery/src && rm -f node_modules/jquery/external/sizzle/dist/sizzle.js && rm -f node_modules/jquery/dist/core.js && mv -f node_modules/jquery/dist/jquery.min.js node_modules/jquery/dist/jquery.js && rm -f node_modules/jquery/dist/jquery.slim* && mv -f node_modules/jquery/dist/jquery.min.map node_modules/jquery/dist/jquery.map && rm -rf node_modules/d3/src && mv node_modules/d3/d3.min.js node_modules/d3/d3.js && rm -f node_modules/elkjs/lib/elk-worker.js node_modules/elkjs/lib/elk.bundled.js",
+    "pretest": "npx tsc",
+    "compilenowatch": "npx tsc",
+    "compile": "npx tsc -watch -p ./",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
   "keywords": [
     "OpenWhisk",
@@ -25,5 +26,9 @@
     "es6-promise-pool": "^2.5.0",
     "jquery": "^3.3.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.2.2"
+  }
 }
