--- a/app/plugins/modules/core-support/package.json
+++ b/app/plugins/modules/core-support/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shell/core-support",
+  "name": "@kui-plugin/core-support",
   "version": "1.0.0",
   "description": "",
   "main": "plugin/plugin.js",
