--- a/app/plugins/modules/openwhisk/package.json
+++ b/app/plugins/modules/openwhisk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openwhisk",
+  "name": "@kui-plugin/openwhisk",
   "version": "0.1.0",
   "description": "IBM Cloud shell plugin for OpenWhisk",
   "main": "plugin/plugin.js",
