--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "[![Travis](https://travis-ci.org/ibm-functions/shell.svg?branch=master)](https://travis-ci.org/ibm-functions/shell) [![License](https://img.shields.io/badge/license-Apache--2.0-blue.svg)](http://www.apache.org/licenses/LICENSE-2.0) [![Join Slack](https://img.shields.io/badge/join-slack-9B69A0.svg)](http://slack.openwhisk.org/) [![codecov](https://codecov.io/gh/ibm-functions/shell/branch/master/graph/badge.svg)](https://codecov.io/gh/ibm-functions/shell) [![HitCount](http://hits.dwyl.io/ibm-functions/shell.svg)](http://hits.dwyl.io/ibm-functions/shell)",
   "main": "build/main/main.js",
   "bin": {
-    "fsh": "fsh.js"
+    "kui": "bin/kui"
   },
   "files": [
     "app/",
-    "bin/",
-    "fsh.js"
+    "bin/"
   ],
   "directories": {
     "doc": "docs",
