--- a/plugins/plugin-k8s/package.json
+++ b/plugins/plugin-k8s/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui/plugin-k8s",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "IBM Cloud shell plugin for kubernetes",
   "main": "plugin/plugin.js",
   "keywords": [
@@ -16,5 +16,8 @@
     "js-yaml": "^3.12.0",
     "needle": "^2.2.4",
     "tmp": "0.0.33"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
