--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -7,6 +7,10 @@
     "prep": "npm run build && ./bin/seticon.js",
     "build": "node ./bin/build.js standalone"
   },
+  "bin": {
+    "kui": "bin/kui",
+    "kubectl-kui": "bin/kubectl-kui"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IBM/kui.git"
@@ -19,10 +23,10 @@
     "visualization",
     "serverless"
   ],
-  "author": {
-    "name": "Nick Mitchell",
-    "email": "nickm@us.ibm.com"
-  },
+  "author": "Nick Mitchell",
+  "contributors": [
+    "Mengting Yan"
+  ],
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/IBM/kui/issues/new"
@@ -47,7 +51,10 @@
     "yargs-parser": "^11.1.1"
   },
   "devDependencies": {
-    "spectron": "^5.0.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "spectron": "^5.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
