--- a/plugins/plugin-bash-like/package.json
+++ b/plugins/plugin-bash-like/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@kui/plugin-bash-like",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/diff.min.js",
-  "author": {
-    "name": "Nick Mitchell",
-    "email": "nickm@us.ibm.com"
-  },
+  "author": "Nick Mitchell",
+  "contributors": [
+    "Mengting Yan"
+  ],
   "license": "Apache-2.0",
   "dependencies": {
     "ansi-to-html": "^0.6.9",
@@ -14,5 +14,8 @@
     "expand-home-dir": "0.0.3",
     "marked": "^0.6.0",
     "shelljs": "^0.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
