--- a/plugins/plugin-manager/package.json
+++ b/plugins/plugin-manager/package.json
@@ -1,14 +1,20 @@
 {
   "name": "@kui/plugin-manager",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Support for field installation of plugins",
   "main": "plugin/plugin.js",
   "keywords": [],
-  "author": "",
+  "author": "Nick Mitchell",
+  "contributors": [
+    "Lionel Villard"
+  ],
   "license": "Apache-2.0",
   "dependencies": {
     "fs-extra": "^7.0.1",
     "tmp": "0.0.33",
     "which": "^1.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
