--- a/plugins/plugin-openwhisk-debug/package.json
+++ b/plugins/plugin-openwhisk-debug/package.json
@@ -3,10 +3,13 @@
   "description": "A Kui plugin that lets users run and debug actions locally in a docker container",
   "license": "Apache-2.0",
   "main": "plugin.js",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "author": {
     "name": "Kerry Chang"
   },
+  "contributors": [
+    "Nick Mitchell"
+  ],
   "dependencies": {
     "extract-zip": "^1.6.7",
     "fs-extra": "^7.0.1",
@@ -14,5 +17,8 @@
     "node-docker-api": "^1.1.22",
     "promise-retry": "^1.1.1",
     "tmp": "0.0.33"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
