--- a/plugins/plugin-wskflow/package.json
+++ b/plugins/plugin-wskflow/package.json
@@ -15,6 +15,10 @@
     "wskflow"
   ],
   "author": "Kerry Chang",
+  "contributors": [
+    "Mengting Yan",
+    "Nick Mitchell"
+  ],
   "license": "Apache-2.0",
   "webpack-prune": [
     "chokidar"
@@ -27,5 +31,8 @@
     "expand-home-dir": "0.0.3",
     "jquery": "^3.3.1",
     "tmp": "0.0.33"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
