--- a/package.json
+++ b/package.json
@@ -44,8 +44,5 @@
   "bugs": {
     "url": "https://github.com/IBM/kui/issues"
   },
-  "homepage": "https://github.com/IBM/kui#readme",
-  "devDependencies": {
-    "lerna": "^3.10.5"
-  }
+  "homepage": "https://github.com/IBM/kui#readme"
 }
