--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,8 +1,19 @@
 {
   "name": "@kui-shell/core",
-  "version": "2.0.3",
+  "version": "2.0.7",
   "description": "An Electron-based shell for cloud-native development",
   "homepage": "https://github.com/IBM/kui#readme",
+  "main": "build/packages/app/src/main/main.js",
+  "files": [
+    "bin",
+    "build",
+    "config",
+    "content",
+    "docs",
+    "src",
+    "templates",
+    "tests"
+  ],
   "scripts": {
     "prep": "npm run build && ./bin/seticon.js",
     "build": "node ./bin/build.js standalone"
