feat: kuiproxy Fixes #266
also fixes broken OS menus
Fixes #278

also fixes many webpack warnings
Fixes #279

--- a/packages/kui-builder/tsconfig.json
+++ b/packages/kui-builder/tsconfig.json
@@ -7,13 +7,14 @@
     "declaration": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": "../app",
+    "baseUrl": "../..",
     "paths": {
-      "@kui-shell/core/*": ["src/*"],
-      "@kui-shell/core/tests/*": ["../../build/packages/app/tests/*"],
-      "@kui-shell/settings/*": ["../../build/*"],
-      "@kui-shell/prescan": ["../../build/.pre-scanned.json"],
-      "@kui-shell/*": ["../../plugins/*"]
+      "@kui-shell/core/tests/*": ["build/packages/app/tests/*"],
+      "@kui-shell/settings/*": ["packages/app/build/*"],
+      "@kui-shell/prescan": ["build/.pre-scanned.json"],
+      "@kui-shell/plugin-*": ["plugins/plugin-*"],
+      "@kui-shell/core/*": ["packages/app/src/*"],
+      "@kui-shell/*": ["packages/*"]
     }
   },
   "include": [
