--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -7,7 +7,7 @@
     "preinstall": "rm -rf node_modules/@kui-shell",
     "build": "./build.sh",
     "build-docker": "docker build . -t kui-proxy",
-    "start": "if [ ! -d node_modules/@kui-shell ]; then echo 'npm run build'; else npm run build-docker; fi; docker run -e DEBUG=* --name kui-proxy --rm -p 8081:3000 kui-proxy"
+    "start": "if [ ! -d node_modules/@kui-shell ]; then echo 'npm run build'; else npm run build-docker; fi; docker run --name kui-proxy --rm -p 8081:3000 kui-proxy"
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
