chore: clean up the configuration flow
Fixes #295

--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -13,7 +13,9 @@
     "kui-shell-lint": "./bin/lint.sh",
     "kui-shell-watch": "./bin/watch.sh"
   },
-  "scripts": {},
+  "scripts": {
+    "configure": "node ./lib/configure.js"
+  },
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
   "dependencies": {
