--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./packages/kui-builder/bin/compile.sh",
     "watch": "./packages/kui-builder/bin/watch.sh",
-    "postinstall": "export CLOUDSHELL_INSTALL_UI=true; npx lerna bootstrap --hoist; (cd tests && ./bin/corral.sh && npm install --no-package-lock) && (cd packages/app && npm run prep) && npm run compile && for i in plugins/*; do if [ -d $i/node_modules ]; then (cd build/plugins/`basename $i` && rm -rf node_modules && cp -a ../../../$i/node_modules .); fi; done && (cd tests && ./bin/corral.sh)"
+    "configure": "(cd packages/kui-builder && npm run configure && ./bin/seticon.js)",
+    "postinstall": "export CLOUDSHELL_INSTALL_UI=true; npx lerna bootstrap --hoist; (cd tests && ./bin/corral.sh && npm install --no-package-lock) && npm run configure && npm run compile && for i in plugins/*; do if [ -d $i/node_modules ]; then (cd build/plugins/`basename $i` && rm -rf node_modules && cp -a ../../../$i/node_modules .); fi; done && (cd tests && ./bin/corral.sh)"
   },
   "dependencies": {},
   "repository": {
