--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ env:
   matrix:
     - LAYERS=core IDX=1
     - LAYERS="bash-like core-support field-installed-plugins editor" IDX=2
-    - LAYERS=openwhisk1 IDX=3
-    - LAYERS=openwhisk2 IDX=4 NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_JAVA8=true
-    - LAYERS=openwhisk3 IDX=5
-    - LAYERS=openwhisk4 IDX=6 NEEDS_OPENWHISK_NODEJS8=true
-    - LAYERS=grid IDX=7
-    - LAYERS=composer1 IDX=8
-    - LAYERS=composer2 IDX=9
-    - LAYERS=composer3 IDX=10
-    - LAYERS=HEADLESS IDX=11
-    - LAYERS=k8s IDX=12
+    - LAYERS=openwhisk1 IDX=3 NEEDS_OPENWHISK=true
+    - LAYERS=openwhisk2 IDX=4 NEEDS_OPENWHISK=true NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_JAVA8=true
+    - LAYERS=openwhisk3 IDX=5 NEEDS_OPENWHISK=true
+    - LAYERS=openwhisk4 IDX=6 NEEDS_OPENWHISK=true NEEDS_OPENWHISK_NODEJS8=true
+    - LAYERS=grid IDX=7 NEEDS_OPENWHISK=true
+    - LAYERS=composer1 IDX=8 NEEDS_OPENWHISK=true
+    - LAYERS=composer2 IDX=9 NEEDS_OPENWHISK=true
+    - LAYERS=composer3 IDX=10 NEEDS_OPENWHISK=true
+    - LAYERS=HEADLESS IDX=11 NEEDS_OPENWHISK=true NEEDS_KUBERNETES=true
+    - LAYERS=k8s IDX=12 NEEDS_KUBERNETES=true
     - SCRIPTS="lint.sh webpack.sh"
 
   global:
