chore: update lerna config to use conventional commits
Fixes #349

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
     "packages/*",
     "plugins/*"
   ],
-  "version": "independent"
+  "version": "independent",
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  }
 }
