--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 # necessary for kubeadm-dind
-group: edge
-dist: xenial
+#dist: xenial
 
 language: node_js
 node_js: 8
@@ -8,19 +7,32 @@ dist: trusty
 
 env:
   matrix:
-    - LAYERS=core IDX=1
-    - LAYERS="bash-like core-support field-installed-plugins editor" IDX=2
-    - LAYERS=openwhisk1 IDX=3 NEEDS_OPENWHISK=true
-    - LAYERS=openwhisk2 IDX=4 NEEDS_OPENWHISK=true NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_JAVA8=true
-    - LAYERS=openwhisk3 IDX=5 NEEDS_OPENWHISK=true
-    - LAYERS=openwhisk4 IDX=6 NEEDS_OPENWHISK=true NEEDS_OPENWHISK_NODEJS8=true
-    - LAYERS=grid IDX=7 NEEDS_OPENWHISK=true
-    - LAYERS=composer1 IDX=8 NEEDS_OPENWHISK=true
-    - LAYERS=composer2 IDX=9 NEEDS_OPENWHISK=true
-    - LAYERS=composer3 IDX=10 NEEDS_OPENWHISK=true
-    - LAYERS=HEADLESS IDX=11 NEEDS_OPENWHISK=true NEEDS_KUBERNETES=true
-    - LAYERS=k8s IDX=12 NEEDS_KUBERNETES=true
     - SCRIPTS="lint.sh webpack.sh"
+      LAYERS="core bash-like core-support field-installed-plugins editor"
+      NEEDS_ELECTRON=true
+      NEEDS_IBMCLOUD_CLI=true # see plugins/plugin-bash-like/src/test/bash-like/bash-like.ts
+
+    - LAYERS="openwhisk1 openwhisk3 grid"
+      NEEDS_ELECTRON=true
+      NEEDS_OPENWHISK=true
+
+    - LAYERS="openwhisk2 openwhisk4"
+      NEEDS_ELECTRON=true
+      NEEDS_OPENWHISK=true
+      NEEDS_OPENWHISK_API_GATEWAY=true
+      NEEDS_OPENWHISK_NODEJS8=true
+      NEEDS_OPENWHISK_JAVA8=true
+      NEEDS_SECOND_OPENWHISK_AUTH=true # see plugins/plugin-openwhisk/src/test/openwhisk2/auth.ts
+
+    - LAYERS="composer1 composer2 composer3"
+      NEEDS_ELECTRON=true
+      NEEDS_OPENWHISK=true
+
+    - LAYERS="HEADLESS k8s"
+      NEEDS_ELECTRON=true
+      NEEDS_HEADLESS=true
+      NEEDS_OPENWHISK=true
+      NEEDS_KUBERNETES=true
 
   global:
     - TRAVIS_KUBE_VERSION=1.12 # kubeadm-dind
@@ -28,15 +40,11 @@ env:
     - TEST_SPACE=testspace
     - LOCAL_OPENWHISK=true # allows e.g. openwhisk/src/test/openwhisk1/headless to avoid trying to host set <not-local>
     - IGNORE_CERTS=true # apache-composer needs this, because it doesn't obey INSECURE_SSL in wskprops
-    - API_HOST="" # delete any global definitions, as we will be using a local openwhisk
     - PATH=bin:$PATH
-    - NUM_OPENWHISK_AUTH_LAYERS=12 # number of layers that need an OpenWhisk auth key
-    - MAX_TRAVIS_CONCURRENCY=4 # max number of concurrent top-level jobs we've configured
     - NO_MAC_DMG_INSTALLER=true # we can't build macOS DMG files in travis :(
     - DISPLAY=:99
     - WINDOW_WIDTH=1400                   # ! important ! so that clicks don't fail due to elements being off-viewport
     - WINDOW_HEIGHT=1050                  # ! ibid !
-    - KEY_FROM_LAYER=true                 # use one api key per test layer?
     - TEST_FROM_BUILD="${TRAVIS_BUILD_DIR}/packages/kui-builder/dist/builds/Kui-linux-x64/Kui" # test against a specific dist build
     - BUILD_ENV=production                # please note: used in dist/electron/build.sh with npm prune --production
 
@@ -47,6 +55,3 @@ after_success: ./tools/travis/publishers/cos.sh
 notifications:
   webhooks:
     - https://openwhisk.ng.bluemix.net/api/v1/web/nickm_production/travis-for-kui/done.json
-  email:
-    - nickm@us.ibm.com
-    - mengting.yan1@ibm.com
