--- a/plugins/plugin-bash-like/package.json
+++ b/plugins/plugin-bash-like/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/diff.min.js",
   "author": "Nick Mitchell",
+  "keywords": ["kui", "plugin"],
   "contributors": [
     "Mengting Yan"
   ],
