--- a/plugins/plugin-editor/package.json
+++ b/plugins/plugin-editor/package.json
@@ -7,9 +7,7 @@
     "@kui-shell/plugins/editor/webpack/pre": "bin/prune-for-browser.sh",
     "@kui-shell/plugins/editor/webpack/post": "bin/restore-after-prune.sh"
   },
-  "keywords": [
-    "kui"
-  ],
+  "keywords": ["kui", "plugin"],
   "author": "Nick Mitchell",
   "contributors": [
     "Mengting Yan"
