--- a/plugins/plugin-apache-composer/package.json
+++ b/plugins/plugin-apache-composer/package.json
@@ -4,6 +4,7 @@
   "description": "IBM Cloud shell plugin for the Apache Composer",
   "main": "plugin/plugin.js",
   "author": "Nick Mitchell",
+  "keywords": ["kui", "plugin"],
   "contributors": [
     "Mengting Yan"
   ],
