--- a/plugins/plugin-editor/package.json
+++ b/plugins/plugin-editor/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@kui-shell/plugin-editor",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Monaco Editor plugin for Kui",
   "main": "plugin.js",
   "bin": {
     "@kui-shell/plugins/editor/webpack/pre": "bin/prune-for-browser.sh",
     "@kui-shell/plugins/editor/webpack/post": "bin/restore-after-prune.sh"
   },
-  "keywords": ["kui", "plugin"],
+  "keywords": [
+    "kui",
+    "plugin"
+  ],
   "author": "Nick Mitchell",
   "contributors": [
     "Mengting Yan"
