--- a/plugins/plugin-openwhisk-debug/package.json
+++ b/plugins/plugin-openwhisk-debug/package.json
@@ -3,8 +3,11 @@
   "description": "A Kui plugin that lets users run and debug actions locally in a docker container",
   "license": "Apache-2.0",
   "main": "plugin.js",
-  "version": "0.0.1",
-  "keywords": ["kui", "plugin"],
+  "version": "0.0.2",
+  "keywords": [
+    "kui",
+    "plugin"
+  ],
   "author": {
     "name": "Kerry Chang"
   },
