--- a/plugins/plugin-proxy-support/package.json
+++ b/plugins/plugin-proxy-support/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@kui-shell/plugin-proxy-support",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
   "description": "Kui plugin that adds runtime support for proxied communication",
-  "keywords": ["kui", "plugin"],
+  "keywords": [
+    "kui",
+    "plugin"
+  ],
   "main": "index.js",
-  "keywords": ["kui", "plugin"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
