--- a/plugins/plugin-apache-composer/package.json
+++ b/plugins/plugin-apache-composer/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@kui-shell/plugin-apache-composer",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "description": "IBM Cloud shell plugin for the Apache Composer",
   "main": "plugin/plugin.js",
   "author": "Nick Mitchell",
-  "keywords": ["kui", "plugin"],
+  "keywords": [
+    "kui",
+    "plugin"
+  ],
   "contributors": [
     "Mengting Yan"
   ],
