--- a/plugins/plugin-bash-like/package.json
+++ b/plugins/plugin-bash-like/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@kui-shell/plugin-bash-like",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/diff.min.js",
   "author": "Nick Mitchell",
-  "keywords": ["kui", "plugin"],
+  "keywords": [
+    "kui",
+    "plugin"
+  ],
   "contributors": [
     "Mengting Yan"
   ],
