--- a/plugins/plugin-grid/package.json
+++ b/plugins/plugin-grid/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@kui-shell/plugin-grid",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "plugin.js",
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
-  "keywords": ["kui", "plugin"],
+  "keywords": [
+    "kui",
+    "plugin"
+  ],
   "dependencies": {
     "pretty-ms": "^4.0.0",
     "uuid": "^3.3.2"
