--- a/plugins/plugin-manager/package.json
+++ b/plugins/plugin-manager/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@kui-shell/plugin-manager",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Support for field installation of plugins",
   "main": "plugin/plugin.js",
-  "keywords": ["kui", "plugin"],
+  "keywords": [
+    "kui",
+    "plugin"
+  ],
   "author": "Nick Mitchell",
   "contributors": [
     "Lionel Villard"
